<resources>
    <string name="add_description">Add description</string>
    <string name="app_name">PointSnaps</string>
    <string name="cancel">Cancel</string>
    <string name="change_theme">Change Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="description_text">Description</string>
    <string name="email">Email</string>
    <string name="empty_fields">Please fill all fields!</string>
    <string name="err_permission_msg">Permissions are required to use this app!</string>
    <string name="error">Error</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="light_theme">Light Theme</string>
    <string name="locating">Locating…</string>
    <string name="login_failed">Login error, please try again!</string>
    <string name="menu_login_txt">Sign in</string>
    <string name="menu_logout_txt">Log out</string>
    <string name="no_location">Cannot find your location</string>
    <string name="ok">OK</string>
    <string name="password">Password</string>
    <string name="register_failed">Registration error, please try again!</string>
    <string name="select_file">Select File</string>
    <string name="select_photo">Select photo</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="take_a_photo">Take a photo </string>
    <string name="title_activity_location">Location</string>
    <string name="unknown_road">Unknown road</string>
    <string name="upload">Upload</string>
    <string name="upload_error_service">Upload error, photo saved</string>
    <string name="upload_from_gallery">Upload from Gallery</string>
    <string name="upload_title">Status</string>
    <string name="uploaded">Data uploaded!</string>
    <string name="uploading">Uploading data!</string>
    <string name="username">Username</string>
    <string name="your_location">Your location:</string>
</resources>
