<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_login"
        android:icon="@drawable/ic_logout"
        android:orderInCategory="100"
        android:title="@string/menu_login_txt"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_change_theme"
        android:title="@string/change_theme"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/action_light_theme"
                android:title="@string/light_theme" />

            <item
                android:id="@+id/action_dark_theme"
                android:title="@string/dark_theme" />
        </menu>
    </item>

</menu>
