<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="com.hyperether.pointsnapssdk.repository.api.request.LoginRequest" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/fragment_background"
        android:clickable="true"
        android:paddingStart="50dp"
        android:paddingTop="50dp"
        android:paddingEnd="50dp"
        android:paddingBottom="10dp"
        android:windowSoftInputMode="adjustResize"
        tools:context="com.hyperether.pointsnaps.ui.fragment.LoginFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/sign_in"
                    android:textColor="?attr/black"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/emailInputLayoutLogin"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailInputLayoutLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/login_edt_margin_top"
                    android:hint="@string/email"
                    android:textColorHint="?attr/black"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="?attr/black"
                        android:ems="10"
                        android:fontFamily="@font/poppins"
                        android:inputType="textPersonName"
                        android:text="@{data.email}"
                        android:textColor="?attr/black"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordInputLayoutLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/edit_padding"
                    android:hint="@string/password"
                    android:textColorHint="?attr/black"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/emailInputLayoutLogin"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="?attr/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="?attr/black"
                        android:ems="10"
                        android:fontFamily="@font/poppins"
                        android:inputType="textPassword"
                        android:text="@{data.password}"
                        android:textColor="?attr/black"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/buttonLoginOk"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/login_edt_margin_top"
                    android:background="@drawable/btn_background_dark"
                    android:elevation="3dp"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:text="@string/sign_in"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/passwordInputLayoutLogin" />

                <TextView
                    android:id="@+id/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/login_edt_margin_top"
                    android:fontFamily="@font/poppins"
                    android:text="@string/sign_up"
                    android:textColor="@color/green"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/buttonLoginOk" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>