<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="data"
            type="com.hyperether.pointsnapssdk.repository.db.UserData" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/fragment_background"
        android:orientation="vertical">

        <include
            android:id="@+id/mainToolbar"
            layout="@layout/toolbar" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="20dp"
            app:layout_constraintBottom_toTopOf="@+id/ll_location"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainToolbar">

            <LinearLayout
                android:id="@+id/ll_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/ic_camera" />

                <TextView
                    android:id="@+id/tv_select_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/select_photo"
                    android:textColor="?attr/select_photo"
                    android:textSize="18sp" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/change_photo_dialog"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:padding="@dimen/padding_upside_hint"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="18dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/iv_photo_open"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:background="@android:color/transparent"
                    android:scaleType="centerCrop" />

                <RelativeLayout
                    android:id="@+id/rl_photo_open"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="bottom|start">

                    <ImageButton
                        android:id="@+id/ib_photo_open"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerInParent="true"
                        android:adjustViewBounds="true"
                        android:background="@android:color/transparent"
                        android:clickable="false"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_camera_again"
                        android:visibility="visible" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/open_preview"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_gravity="bottom|end"
                    android:gravity="end"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageButton
                        android:id="@+id/open_preview_dialog"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="8dp"
                        android:adjustViewBounds="true"
                        android:background="@android:color/transparent"
                        android:clickable="false"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_photos_preview" />

                    <TextView
                        android:id="@+id/ib_photo_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:clickable="false"
                        android:text="0"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/limit_photos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:clickable="false"
                        android:text="/6"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </FrameLayout>

        <LinearLayout
            android:id="@+id/ll_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/btn_background_light"
            android:elevation="4dp"
            android:orientation="horizontal"
            android:padding="15dp"
            android:text="@string/title_activity_location"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/ll_description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <ImageView
                android:id="@+id/iv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_location" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:paddingLeft="10dp"
                android:text="@{data.mAddress}"
                android:textColor="?attr/black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_background_light"
            android:elevation="4dp"
            android:orientation="horizontal"
            android:padding="15dp"
            android:text="@string/title_activity_location"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/ll_upload"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <ImageView
                android:id="@+id/iv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_description" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:text="@{data.mAddress}"
                android:textColor="?attr/black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_background_dark"
            android:elevation="1dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="15dp"
            android:text="@string/title_activity_location"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <ImageView
                android:id="@+id/iv_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_upload" />

            <TextView
                android:id="@+id/tv_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingEnd="20dp"
                android:paddingRight="20dp"
                android:text="@string/upload"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
